--- a/module3/ex3.Rmd
+++ b/module3/ex3.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 
 ```{r}
 # Load the packages. 
-packages <- c("tidyverse", "PheCAP", "glmnet", "glmpath", "pROC")
+packages <- c("tidyverse", "PheCAP", "glmnet", "glmpath", "pROC", "parallel")
 
 # Check if the pacakages are missing or not. 
 # If missing, install automatically.
@@ -34,7 +34,6 @@ load("environment.RData")
 ```{r}
 # Load helper functions.
 source("../Rscripts/helper_function.R")
-source("../Rscripts/ex2_helper_function.R")
 ```
 
 # Feature selection
@@ -56,7 +55,7 @@ ehr_data %>%
 ehr_data %>%
   filter(!is.na(label)) %>%
   mutate(disease = factor(label)) %>%
-  ggplot(aes(x = log(main_ICD + 1))) +
+  ggplot(aes(x = main_ICD)) +
   geom_density(aes(color = disease))
 ```
 
@@ -66,7 +65,7 @@ The more the disease-related codes, the more **likely** the patient has the dise
 ehr_data %>%
   filter(!is.na(label)) %>%
   mutate(disease = factor(label)) %>%
-  ggplot(aes(x = log(main_NLP + 1))) +
+  ggplot(aes(x = main_NLP)) +
   geom_density(aes(color = disease))
 ```
 
@@ -77,7 +76,7 @@ Other options?
 ehr_data %>%
   filter(!is.na(label)) %>%
   mutate(disease = factor(label)) %>%
-  ggplot(aes(x = log(main_ICD+main_NLP+1))) +
+  ggplot(aes(x = main_ICDNLP)) +
   geom_density(aes(color = disease))
 ```
 
@@ -86,7 +85,7 @@ nonmissing_index <- which(!is.na(ehr_data$label))
 y <- ehr_data$label[nonmissing_index]
 sicd <- ehr_data$main_ICD
 snlp <- ehr_data$main_NLP 
-sicdnlp <- ehr_data$main_ICD + ehr_data$main_NLP 
+sicdnlp <- ehr_data$main_ICDNLP
 
 get_auc(y, sicd[nonmissing_index])
 get_auc(y, snlp[nonmissing_index])
@@ -119,19 +118,17 @@ ehr_data %>%
   ggplot(aes(x = main_ICD)) +
   geom_density(aes(color = disease)) +
   theme_bw() + 
-  annotate("rect", fill = "grey", alpha = 0.7, xmin = 1, xmax = 4, 
-           ymin = -Inf, ymax = Inf) +
-  xlim(c(0,10))
+  annotate("rect", fill = "grey", alpha = 0.7, xmin = 0, xmax = 3, 
+           ymin = -Inf, ymax = Inf) 
 
 ehr_data %>%
   filter(!is.na(label)) %>%
   mutate(disease = factor(label)) %>%
-  ggplot(aes(x = main_ICD + main_NLP)) +
+  ggplot(aes(x = main_ICDNLP)) +
   geom_density(aes(color = disease)) +
   theme_bw() + 
-  annotate("rect", fill = "grey", alpha = 0.7, xmin = 1, xmax = 6, 
-           ymin = -Inf, ymax = Inf) +
-  xlim(c(0,10))
+  annotate("rect", fill = "grey", alpha = 0.7, xmin = 0, xmax = 3, 
+           ymin = -Inf, ymax = Inf) 
 ```
 
 - Left white rect: patients not having the disease.
@@ -147,7 +144,7 @@ Surrogates are available for all the patients!
 # Prepare 3 surrogates.
 sicd <- ehr_data$main_ICD
 snlp <- ehr_data$main_NLP 
-sicdnlp <- ehr_data$main_ICD + ehr_data$main_NLP 
+sicdnlp <- ehr_data$main_ICDNLP 
 
 # Prepare features to be selected. 
 x <- data.matrix(ehr_data %>% select(starts_with("COD") | starts_with("NLP")))
@@ -157,9 +154,9 @@ Run surrogate-assisted feature extraction (SAFE) and show result.
 
 ```{r}
 # Truncated using 3 and 1. 
-SAFE_icd <- extreme_method(sicd, x, u_bound = 4, l_bound = 1)
-SAFE_nlp <- extreme_method(snlp, x, u_bound = 4, l_bound = 1)
-SAFE_both <- extreme_method(sicd+snlp, x, u_bound = 6, l_bound = 1)
+SAFE_icd <- extreme_method(sicd, x, u_bound = 3, l_bound = 0)
+SAFE_nlp <- extreme_method(snlp, x, u_bound = 3, l_bound = 0)
+SAFE_both <- extreme_method(sicdnlp, x, u_bound = 3, l_bound = 0)
 
 # Majority voting. 
 beta <- rbind(SAFE_icd$beta_all, SAFE_nlp$beta_all, SAFE_both$beta_all)
@@ -174,103 +171,102 @@ This is the idea of *majority voting*.
 Train phenotyping model and show the AUC on the testing set. 
 
 ```{r}
-selected_features <- c("main_ICD", "main_NLP", "healthcare_utilization", SAFE_feature)
+selected_features <- c("main_ICD", "main_NLP", "main_ICDNLP", "healthcare_utilization", SAFE_feature)
 
-modelssl_lr <- fit_alasso_bic(
-  y = train_y,
-  x = train_x[, selected_features] 
-)
+# Fit PheCAP.
+beta.phecap <- adaptive_lasso_fit(x = train_x[, selected_features], 
+                                  y = train_y, 
+                                  tuning = "cv", family = "binomial")
 
-newx <- cbind(1, test_x[, selected_features])
-
-# Prediction on testing set.
-y_hat <- expit(newx %*% modelssl_lr$beta_hat) # Inverse Logit
-
-plot(roc(test_y, y_hat),
-  print.auc = TRUE,
-  max.auc.polygon = TRUE, main = "PheCAP"
-)
+y_hat.phecap <- linear_model_predict(beta = beta.phecap, 
+                                     x = test_x[, selected_features] , 
+                                     probability = TRUE)
 ```
 
 ```{r}
-head(get_roc(test_y, y_hat))
+roc.phecap <- roc(test_y, y_hat.phecap)
+
+plot(roc.lasso,
+  print.auc = TRUE, main = "n_training = 90 (50%)"
+)
+plot(roc.alasso,
+  print.auc = TRUE, col = 'red', add = TRUE, print.auc.y = 0.4
+)
+plot(roc.phecap,
+  print.auc = TRUE, col = 'blue', add = TRUE, print.auc.y = 0.3
+)
+legend(0, 0.2, legend = c("LASSO", "ALASSO", "PheCAP"), col = c("black","red", "blue"), 
+       lty = 1, cex = 0.8)
 ```
 
 ```{r}
-labeled_data <- ehr_data %>% dplyr::filter(!is.na(label))
+FPR = 0.05
+sens_spec <- rbind(coords(roc = roc(test_y, y_hat.lasso), x = FPR, input = "fpr")[-1],
+                    coords(roc = roc(test_y, y_hat.alasso), x = FPR, input = "fpr")[-1],
+                    coords(roc = roc(test_y, y_hat.phecap), x = FPR, input = "fpr")[-1])
 
-test_auc <- c()
-for (i in round(seq(0.2, 0.7, 0.1) * nrow(labeled_data))) {
-  set.seed(123456)
-  idx <- sample(labeled_data$patient_id, i)
-  train_data <- labeled_data %>% filter(patient_id %in% idx)
-  test_data <- labeled_data %>% filter(!(patient_id %in% idx))
-  idy <- test_data$patient_id
-
-  # LASSO
-  metric <- validate_model(
-    train_y = train_data$label,
-    test_y = test_data$label,
-    test_y_hat = lasso_pred(train_data, test_data),
-    train_y_hat = lasso_pred(train_data, train_data)
-  )
-
-  # Formatting
-  test_auc <- rbind(test_auc, data.frame(
-    n_training = i,
-    method = "LASSO",
-    median = metric$test_AUC,
-    L = as.numeric(sub(".*?(\\d+\\.\\d+).*", "\\1", metric$test_CI)),
-    U = as.numeric(sub(".*\\b(\\d+\\.\\d+).*", "\\1", metric$test_CI))
-  ))
-
-  # ALASSO
-  metric <- validate_model(
-    train_y = train_data$label,
-    test_y = test_data$label,
-    test_y_hat = alasso_pred(train_data, test_data),
-    train_y_hat = alasso_pred(train_data, train_data)
-  )
-
-  test_auc <- rbind(test_auc, data.frame(
-    n_training = i,
-    method = "ALASSO",
-    median = metric$test_AUC,
-    L = as.numeric(sub(".*?(\\d+\\.\\d+).*", "\\1", metric$test_CI)),
-    U = as.numeric(sub(".*\\b(\\d+\\.\\d+).*", "\\1", metric$test_CI))
-  ))
-
-  # PheCAP
-  metric <- validate_model(
-    train_y = train_data$label,
-    test_y = test_data$label,
-    test_y_hat = phe_pred(train_data, test_data),
-    train_y_hat = phe_pred(train_data, train_data)
-  )
-
-  test_auc <- rbind(test_auc, data.frame(
-    n_training = i,
-    method = "PheCAP",
-    median = metric$test_AUC,
-    L = as.numeric(sub(".*?(\\d+\\.\\d+).*", "\\1", metric$test_CI)),
-    U = as.numeric(sub(".*\\b(\\d+\\.\\d+).*", "\\1", metric$test_CI))
-  ))
-}
-
-# Facet Plot
-test_auc %>% ggplot(aes(
-  x = n_training, y = median,
-  group = method, color = method
-)) +
-  geom_point() +
-  geom_line() +
-  geom_errorbar(aes(ymin = L, ymax = U)) +
-  facet_grid(. ~ method)
+rownames(sens_spec) <- c("LASSO", "ALASSO", "PheCAP")
+sens_spec
 ```
 
+```{r}
+FPR = 0.1
+sens_spec <- rbind(coords(roc = roc(test_y, y_hat.lasso), x = FPR, input = "fpr")[-1],
+                    coords(roc = roc(test_y, y_hat.alasso), x = FPR, input = "fpr")[-1],
+                    coords(roc = roc(test_y, y_hat.phecap), x = FPR, input = "fpr")[-1])
+
+rownames(sens_spec) <- c("LASSO", "ALASSO", "PheCAP")
+sens_spec
+```
+
+# Different training size
+- randomly sample traning size = 50, 70, 90
+- rest as testing set
+- repeat 500 times
+
+```{r}
+selected_index <- which(colnames(ehr_data) %in% selected_features == TRUE)
+```
+
+
+```{r}
+start<- Sys.time()
+auc_phecap <- validate_phecap(dat = labeled_data, nsim = 600, 
+                              n.train = c(50, 70, 90),
+                              selected_features = selected_index)
+end <- Sys.time()
+end - start
+```
+
+```{r}
+colnames(auc_phecap) <- paste(paste0("n=", c(50, 70, 90)), c("PheCAP"), sep = ",")
+```
+
+
+```{r}
+boxplot(cbind(auc_supervised, auc_phecap) %>% select(starts_with("n=50")), 
+        ylim = c(0.5, 1), names = c("LASSO", "ALASSO", "PheCAP"), main = "n=50")
+boxplot(cbind(auc_supervised, auc_phecap) %>% select(starts_with("n=70")), 
+        ylim = c(0.5, 1), names = c("LASSO", "ALASSO", "PheCAP"), main = "n=70")
+boxplot(cbind(auc_supervised, auc_phecap) %>% select(starts_with("n=90")), 
+        ylim = c(0.5, 1), names = c("LASSO", "ALASSO", "PheCAP"), main = "n=90")
+```
+```{r}
+boxplot(auc_supervised[,1:3], ylim = c(0.5, 1), 
+        names = c("n=50", "n=70", "n=90"), main = "LASSO")
+```
+```{r}
+boxplot(auc_supervised[,4:6], ylim = c(0.5, 1), 
+        names = c("n=50", "n=70", "n=90"), main = "ALASSO")
+```
+
+```{r}
+boxplot(auc_phecap[,1:3], ylim = c(0.5, 1), 
+        names = c("n=50", "n=70", "n=90"), main = "PheCAP")
+```
 
 Save the data and feature selected for module 4 and model fitting. 
 
-```{r}
+```{r, eval = F}
 save(list = ls(), file = "../module4/environment.RData")
 ```
