--- a/module1/module1_pass.Rmd
+++ b/module1/module1_pass.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Module 1: Introduction to PheCAP data"
-author: "Siyue Yang, Jianhui Gao, and Jesse Gronsbell"
+author: "Siyue Yang, Jianhui Gao, and Jessica Gronsbell"
 output: pdf_document
 ---
 
