--- a/module3/module3_phecap.Rmd
+++ b/module3/module3_phecap.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Module 3: Semi-supervised learning (PheCAP)"
-author: "Siyue Yang, Jianhui Gao, and Jesse Gronsbell"
+author: "Siyue Yang, Jianhui Gao, and Jessica Gronsbell"
 output:
   pdf_document: default
   html_document: default
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 # Load the packages. 
 packages <- c("tidyverse", "PheCAP", "glmnet", "glmpath", "pROC", "parallel")
 
-# Check if the pacakages are missing or not. 
+# Check if the packages are missing or not. 
 # If missing, install automatically.
 # If not missing, load the package.
 package.check <- lapply(
@@ -217,7 +217,7 @@ head(roc_full.phecap,10)
 ```
 
 # Different training size
-- randomly sample traning size = 50, 70, 90
+- randomly sample training size = 50, 70, 90
 - rest as testing set
 - repeat 600 times
 
