--- a/module2/module2_phecap.Rmd
+++ b/module2/module2_phecap.Rmd
@@ -89,29 +89,37 @@ test_y <- test_data %>%
 
 ```{r}
 # Choose best lambda using CV
-beta.lasso <- lasso_fit(x = train_x, y = train_y, 
-                        tuning = "cv", family = "binomial")
+beta.lasso <- lasso_fit(
+  x = train_x, y = train_y,
+  tuning = "cv", family = "binomial"
+)
 ```
 ```{r}
 # Features Selected
-names(beta.lasso[abs(beta.lasso)>0])[-1]
+names(beta.lasso[abs(beta.lasso) > 0])[-1]
 ```
 ```{r}
 # prediction on testing set
-y_hat.lasso <- linear_model_predict(beta = beta.lasso, x = test_x, 
-                                    probability = TRUE)
+y_hat.lasso <- linear_model_predict(
+  beta = beta.lasso, x = test_x,
+  probability = TRUE
+)
 ```
 
 ```{r}
 # Fit Adaptive LASSO
-beta.alasso <- adaptive_lasso_fit(x = train_x, y = train_y, 
-                                   tuning = "cv", family = "binomial")
-y_hat.alasso <- linear_model_predict(beta = beta.alasso, x = test_x, 
-                                    probability = TRUE)
+beta.alasso <- adaptive_lasso_fit(
+  x = train_x, y = train_y,
+  tuning = "cv", family = "binomial"
+)
+y_hat.alasso <- linear_model_predict(
+  beta = beta.alasso, x = test_x,
+  probability = TRUE
+)
 
 
 # Features Selected
-names(beta.alasso[abs(beta.alasso)>0])[-1]
+names(beta.alasso[abs(beta.alasso) > 0])[-1]
 ```
 ```{r}
 roc.lasso <- roc(test_y, y_hat.lasso)
@@ -121,20 +129,22 @@ plot(roc.lasso,
   print.auc = TRUE, main = "n_training = 106 (40%)"
 )
 plot(roc.alasso,
-  print.auc = TRUE, col = 'red', add = TRUE, print.auc.y = 0.4
+  print.auc = TRUE, col = "red", add = TRUE, print.auc.y = 0.4
 )
-legend(0, 0.2, legend = c("LASSO", "ALASSO"), col = c("black","red"), 
-       lty = 1, cex = 0.8)
+legend(0, 0.2,
+  legend = c("LASSO", "ALASSO"), col = c("black", "red"),
+  lty = 1, cex = 0.8
+)
 ```
 
 ```{r}
 roc_full.lasso <- get_roc(y_true = test_y, y_score = y_hat.lasso)
-head(roc_full.lasso,10)
+head(roc_full.lasso, 10)
 ```
 
 ```{r}
 roc_full.alasso <- get_roc(y_true = test_y, y_score = y_hat.alasso)
-head(roc_full.lasso,10)
+head(roc_full.lasso, 10)
 ```
 
 # Different train size
@@ -143,10 +153,13 @@ head(roc_full.lasso,10)
 - repeat 600 times
 
 ```{r, cache=TRUE}
-start<- Sys.time()
-auc_supervised <- validate_supervised(dat = labeled_data, nsim = 600, 
-                                      n.train = c(50, 70, 90))
+start <- Sys.time()
+auc_supervised <- validate_supervised(
+  dat = labeled_data, nsim = 600,
+  n.train = c(50, 70, 90)
+)
 end <- Sys.time()
+
 end - start
 
 # median AUC
@@ -156,29 +169,39 @@ apply(auc_supervised, 2, sd)
 ```
 
 ```{r}
-par(mfrow =c(1,3))
-boxplot(auc_supervised %>% select(starts_with("n=50")) , ylim = c(0.5, 1), 
-        names = c("LASSO", "ALASSO"), main = "n=50")
-boxplot(auc_supervised %>% select(starts_with("n=70")) , ylim = c(0.5, 1), 
-        names = c("LASSO", "ALASSO"), main = "n=70")
-boxplot(auc_supervised %>% select(starts_with("n=90")) , ylim = c(0.5, 1), 
-        names = c("LASSO", "ALASSO"), main = "n=90")
+par(mfrow = c(1, 3))
+boxplot(auc_supervised %>% select(starts_with("n=50")),
+  ylim = c(0.5, 1),
+  names = c("LASSO", "ALASSO"), main = "n=50"
+)
+boxplot(auc_supervised %>% select(starts_with("n=70")),
+  ylim = c(0.5, 1),
+  names = c("LASSO", "ALASSO"), main = "n=70"
+)
+boxplot(auc_supervised %>% select(starts_with("n=90")),
+  ylim = c(0.5, 1),
+  names = c("LASSO", "ALASSO"), main = "n=90"
+)
 ```
 ```{r}
-boxplot(auc_supervised[,1:3], ylim = c(0.5, 1), 
-        names = c("n=50", "n=70", "n=90"), main = "LASSO")
+boxplot(auc_supervised[, 1:3],
+  ylim = c(0.5, 1),
+  names = c("n=50", "n=70", "n=90"), main = "LASSO"
+)
 ```
 ```{r}
-boxplot(auc_supervised[,4:6], ylim = c(0.5, 1), 
-        names = c("n=50", "n=70", "n=90"), main = "ALASSO")
+boxplot(auc_supervised[, 4:6],
+  ylim = c(0.5, 1),
+  names = c("n=50", "n=70", "n=90"), main = "ALASSO"
+)
 ```
 
 # Appendix
 
 ## Random Forest
 ```{r}
-model_rf <- rfsrc(y ~., data = data.frame(y =train_y, x = train_x))
-y_hat.rf <- predict(model_rf, newdata=data.frame(x = test_x))$predicted
+model_rf <- rfsrc(y ~ ., data = data.frame(y = train_y, x = train_x))
+y_hat.rf <- predict(model_rf, newdata = data.frame(x = test_x))$predicted
 ```
 
 ```{r}
@@ -188,19 +211,21 @@ plot(roc.lasso,
   print.auc = TRUE, main = "n_training = 106 (40%)"
 )
 plot(roc.alasso,
-  print.auc = TRUE, col = 'red', add = TRUE, print.auc.y = 0.4
+  print.auc = TRUE, col = "red", add = TRUE, print.auc.y = 0.4
 )
 plot(roc.rf,
-  print.auc = TRUE, col = 'grey', add = TRUE, print.auc.y = 0.3
+  print.auc = TRUE, col = "grey", add = TRUE, print.auc.y = 0.3
 )
-legend(0, 0.2, legend = c("LASSO", "ALASSO","Random Forest"), col = c("black","red", "grey"), 
-       lty = 1, cex = 0.8)
+legend(0, 0.5,
+  legend = c("LASSO", "ALASSO", "Random Forest"), col = c("black", "red", "grey"),
+  lty = 1, cex = 0.5
+)
 ```
 
 ## SVM
 ```{r}
-model_svm <- fit_svm(x = train_x, y = train_y)
-y_hat.svm <- predict_svm(model_svm, test_x)
+model_svm <- SVMMaj::svmmaj(X = train_x, y = train_y)
+y_hat.svm <- predict(model_svm, test_x)
 ```
 
 ```{r}
@@ -210,23 +235,50 @@ plot(roc.lasso,
   print.auc = TRUE, main = "n_training = 106 (40%)"
 )
 plot(roc.alasso,
-  print.auc = TRUE, col = 'red', add = TRUE, print.auc.y = 0.4
+  print.auc = TRUE, col = "red", add = TRUE, print.auc.y = 0.4
 )
 plot(roc.rf,
-  print.auc = TRUE, col = 'grey', add = TRUE, print.auc.y = 0.3
+  print.auc = TRUE, col = "grey", add = TRUE, print.auc.y = 0.3
 )
 plot(roc.svm,
-  print.auc = TRUE, col = 'pink', add = TRUE, print.auc.y = 0.2
+  print.auc = TRUE, col = "pink", add = TRUE, print.auc.y = 0.2
 )
-legend(0, 0.4, legend = c("LASSO", "ALASSO","Random Forest", "SVM"), 
-       col = c("black","red", "grey", "pink"), 
-       lty = 1, cex = 0.8)
+legend(0, 0.5,
+  legend = c("LASSO", "ALASSO", "Random Forest", "SVM"),
+  col = c("black", "red", "grey", "pink"),
+  lty = 1, cex = 0.5
+)
 ```
 
 
 ## Validation
 ```{r, eval=FALSE}
-auc_rfandsvm <- validate_svmandrf(dat = labeled_data, nsim = 10)
+start <- Sys.time()
+auc_rfandsvm <- validate_svmandrf(dat = labeled_data, nsim = 600)
+end <- Sys.time()
+end - start
+saveRDS(auc_rfandsvm, "appendix.rds")
+```
+```{r}
+auc_rfandsvm <- readRDS("appendix.rds")
+
+# median AUC
+apply(auc_rfandsvm, 2, median)
+# SE
+apply(auc_rfandsvm, 2, sd)
 ```
 
-
+```{r}
+boxplot(cbind(auc_supervised, auc_rfandsvm) %>% select(starts_with("n=50")),
+  ylim = c(0.5, 1),
+  names = c("LASSO", "ALASSO", "Random Forest", "SVM"), main = "n=50"
+)
+boxplot(cbind(auc_supervised, auc_rfandsvm) %>% select(starts_with("n=70")),
+  ylim = c(0.5, 1),
+  names = c("LASSO", "ALASSO", "Random Forest", "SVM"), main = "n=70"
+)
+boxplot(cbind(auc_supervised, auc_rfandsvm) %>% select(starts_with("n=90")),
+  ylim = c(0.5, 1),
+  names = c("LASSO", "ALASSO", "Random Forest", "SVM"), main = "n=90"
+)
+```
