--- a/module1/module1_intro.Rmd
+++ b/module1/module1_intro.Rmd
@@ -37,19 +37,22 @@ source("../Rscripts/helper_function.R")
 
 Information about the PheCAP package can be found here: https://celehs.github.io/PheCAP/.
 
-This data mart is a random sample of patients in the Mass General Brigham (formerly Partner's Healthcare) EHR database who had at lease one note of 500 characters:
+This data mart is a random sample of patients in the Mass General Brigham (formerly Partner's Healthcare) EHR database who had at least one note of 500 characters and met an initial filter for coronary artery disease (CAD) defined as: 
 
-(i) met an initial filter for coronary artery disease (CAD): $\geq$ 1 ICD9 code related to CAD (410.x, 411.x, 412.x, 413., 414.x) 
+(i) $\geq$ 1 ICD9 code related to CAD (410.x, 411.x, 412.x, 413., 414.x) 
 
 or
 
 (ii) $\ge$ 1 mention for any CAD related concepts (eg. CAD, CAD procedures, CAD biomarkers, positive stress test)
 
+\newpage
+
 # PheCAP data
 
 ```{r}
 data(ehr_data)
-data <- PhecapData(ehr_data, "healthcare_utilization", "label", 0.4, patient_id = "patient_id")
+data <- PhecapData(ehr_data, "healthcare_utilization", "label", 75,
+                   "patient_id", seed = 123)
 data
 ```
 
@@ -58,7 +61,7 @@ The data contains 10,000 observations, but only 181 labeled examples split into 
 # Exploratory data analysis
 
 ```{r, eval = FALSE}
-ehr_data %>% head() 
+ehr_data %>% head(10) 
 ```
 
 - Labels: "label", whether the patient has CAD, **extracted from chart review by a clinician**
