--- a/module2/module2_slides.Rmd
+++ b/module2/module2_slides.Rmd
@@ -1,17 +1,16 @@
 ---
-title: "Module 2: Supervised Learning"
-author: "Jianhui Gao, Siyue Yang, and Jessica Gronsbell"
-date: "31/05/2022"
-output:
-  pdf_document: default
+title: "Module 2: Supervised learning"
+output: beamer_presentation
 ---
+
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 # Load helper functions.
 source("../Rscripts/helper_function.R")
 ```
 
-```{r}
+```{r, include=FALSE}
 # If a package is installed, it will be loaded. If any
 ## are not, the missing package(s) will be installed
 ## from CRAN and then loaded.
@@ -37,12 +36,8 @@ package.check <- lapply(
 load("environment.RData")
 ```
 
-# Prepare data for algorithm development
 
--   Split data into training and testing set
--   Training 106(60%), Testing 75(40%)
-
-```{r}
+```{r include=FALSE}
 data <- PhecapData(PheCAP::ehr_data, "healthcare_utilization", "label", 75,
   patient_id = "patient_id", seed = 123
 )
@@ -83,9 +78,27 @@ test_y <- test_data %>%
   pull()
 ```
 
-# Penalized logistic regression
 
--   Fit LASSO and Adaptive LASSO(ALASSO)
+# Split data into train and test 
+
+```{r}
+dim(train_x)
+```
+
+```{r}
+length(train_y)
+```
+
+
+```{r}
+dim(test_x)
+```
+
+```{r}
+length(test_y)
+```
+
+# LASSO logistic regression
 
 ```{r}
 # Choose best lambda using CV
@@ -95,18 +108,13 @@ beta.lasso <- lasso_fit(
 )
 ```
 
-
+\tiny
 ```{r}
 # Features Selected
 names(beta.lasso[abs(beta.lasso) > 0])[-1]
 ```
-```{r}
-# prediction on testing set
-y_hat.lasso <- linear_model_predict(
-  beta = beta.lasso, x = test_x,
-  probability = TRUE
-)
-```
+
+# ALASSO logistic regression
 
 ```{r}
 # Fit Adaptive LASSO
@@ -114,21 +122,47 @@ beta.alasso <- adaptive_lasso_fit(
   x = train_x, y = train_y,
   tuning = "cv", family = "binomial"
 )
+```
+
+\tiny
+```{r}
+# ALASSO features selected
+names(beta.alasso[abs(beta.alasso) > 0])[-1]
+```
+
+```{r}
+# LASSO features selected
+names(beta.lasso[abs(beta.lasso) > 0])[-1]
+```
+
+# Get model predictions + ROC curve
+
+```{r}
+# Prediction on testing set (LASSO)
+y_hat.lasso <- linear_model_predict(
+  beta = beta.lasso, x = test_x,
+  probability = TRUE
+)
+```
+
+```{r}
+# Prediction on testing set (ALASSO)
 y_hat.alasso <- linear_model_predict(
   beta = beta.alasso, x = test_x,
   probability = TRUE
 )
-
-
-# Features Selected
-names(beta.alasso[abs(beta.alasso) > 0])[-1]
 ```
+
 ```{r}
 roc.lasso <- roc(test_y, y_hat.lasso)
 roc.alasso <- roc(test_y, y_hat.alasso)
+```
 
+# LASSO vs. ALASSO
+
+```{r, echo = FALSE}
 plot(roc.lasso,
-  print.auc = TRUE, main = "n_training = 106 (40%)"
+  print.auc = TRUE, main = paste0("n_training = ", nrow(train_x))
 )
 plot(roc.alasso,
   print.auc = TRUE, col = "red", add = TRUE, print.auc.y = 0.4
@@ -139,12 +173,9 @@ legend(0, 0.2,
 )
 ```
 
-- ROC parameter at FPR = 5% and 10% cut-off 
+# LASSO vs. ALASSO at FPR = 0.10
 
-```{r}
-roc_full.lasso <- get_roc(y_true = test_y, y_score = y_hat.lasso) %>% data.frame()
-get_roc_parameter(0.05, roc_full.lasso)
-```
+\tiny
 ```{r}
 roc_full.lasso <- get_roc(y_true = test_y, y_score = y_hat.lasso) %>% data.frame()
 get_roc_parameter(0.1, roc_full.lasso)
@@ -152,35 +183,23 @@ get_roc_parameter(0.1, roc_full.lasso)
 
 ```{r}
 roc_full.alasso <- get_roc(y_true = test_y, y_score = y_hat.alasso) %>% data.frame()
-get_roc_parameter(0.05, roc_full.alasso)
-```
-```{r}
-roc_full.alasso <- get_roc(y_true = test_y, y_score = y_hat.alasso) %>% data.frame()
 get_roc_parameter(0.1, roc_full.alasso)
 ```
-
-# Different train size
-- randomly sample training size = 50, 70, 90
-- rest as testing set
-- repeat 600 times
+# LASSO vs. ALASSO with different training set size
+- Randomly sample training size = 50, 70, 90
+- Use the remaining data as the test set 
+- Repeat 600 times
 
 ```{r, cache=TRUE}
-start <- Sys.time()
 auc_supervised <- validate_supervised(
   dat = labeled_data, nsim = 600,
   n.train = c(50, 70, 90)
 )
-end <- Sys.time()
-
-end - start
-
-# median AUC
-apply(auc_supervised, 2, median)
-# SE
-apply(auc_supervised, 2, sd)
 ```
 
-```{r}
+# LASSO vs. ALASSO with different training set size
+
+```{r, echo = FALSE}
 par(mfrow = c(1, 3))
 boxplot(auc_supervised %>% select(starts_with("n=50")),
   ylim = c(0.5, 1),
@@ -195,56 +214,32 @@ boxplot(auc_supervised %>% select(starts_with("n=90")),
   names = c("LASSO", "ALASSO"), main = "n=90"
 )
 ```
-```{r}
-boxplot(auc_supervised[, 1:3],
-  ylim = c(0.5, 1),
-  names = c("n=50", "n=70", "n=90"), main = "LASSO"
-)
-```
-```{r}
-boxplot(auc_supervised[, 4:6],
-  ylim = c(0.5, 1),
-  names = c("n=50", "n=70", "n=90"), main = "ALASSO"
-)
-```
 
-# Appendix
+# Random Forest and SVM
 
-## Random Forest
+\tiny
 ```{r}
+# Random forest
 model_rf <- rfsrc(y ~ ., data = data.frame(y = train_y, x = train_x))
-y_hat.rf <- predict(model_rf, newdata = data.frame(x = test_x))$predicted
-```
-
-```{r}
+y_hat.rf <- predict(model_rf, 
+                    newdata = data.frame(x = test_x))$predicted
 roc.rf <- roc(test_y, y_hat.rf)
-
-plot(roc.lasso,
-  print.auc = TRUE, main = "n_training = 106 (40%)"
-)
-plot(roc.alasso,
-  print.auc = TRUE, col = "red", add = TRUE, print.auc.y = 0.4
-)
-plot(roc.rf,
-  print.auc = TRUE, col = "grey", add = TRUE, print.auc.y = 0.3
-)
-legend(0, 0.5,
-  legend = c("LASSO", "ALASSO", "Random Forest"), col = c("black", "red", "grey"),
-  lty = 1, cex = 0.5
-)
 ```
 
-## SVM
 ```{r}
+# SVM
 model_svm <- SVMMaj::svmmaj(X = train_x, y = train_y)
 y_hat.svm <- predict(model_svm, test_x)
+roc.svm <- roc(test_y, y_hat.svm)
 ```
 
-```{r}
+# ROC curves
+
+```{r, echo = FALSE}
 roc.svm <- roc(test_y, y_hat.svm)
 
 plot(roc.lasso,
-  print.auc = TRUE, main = "n_training = 106 (40%)"
+  print.auc = TRUE, main = paste0("n_training = ", nrow(train_x))
 )
 plot(roc.alasso,
   print.auc = TRUE, col = "red", add = TRUE, print.auc.y = 0.4
@@ -259,38 +254,5 @@ legend(0, 0.5,
   legend = c("LASSO", "ALASSO", "Random Forest", "SVM"),
   col = c("black", "red", "grey", "pink"),
   lty = 1, cex = 0.5
-)
-```
-
-
-## Validation
-```{r, eval=FALSE}
-start <- Sys.time()
-auc_rfandsvm <- validate_svmandrf(dat = labeled_data, nsim = 600)
-end <- Sys.time()
-end - start
-saveRDS(auc_rfandsvm, "appendix.rds")
-```
-```{r}
-auc_rfandsvm <- readRDS("appendix.rds")
-
-# median AUC
-apply(auc_rfandsvm, 2, median)
-# SE
-apply(auc_rfandsvm, 2, sd)
-```
-
-```{r}
-boxplot(cbind(auc_supervised, auc_rfandsvm) %>% select(starts_with("n=50")),
-  ylim = c(0.5, 1),
-  names = c("LASSO", "ALASSO", "Random Forest", "SVM"), main = "n=50"
-)
-boxplot(cbind(auc_supervised, auc_rfandsvm) %>% select(starts_with("n=70")),
-  ylim = c(0.5, 1),
-  names = c("LASSO", "ALASSO", "Random Forest", "SVM"), main = "n=70"
-)
-boxplot(cbind(auc_supervised, auc_rfandsvm) %>% select(starts_with("n=90")),
-  ylim = c(0.5, 1),
-  names = c("LASSO", "ALASSO", "Random Forest", "SVM"), main = "n=90"
 )
 ```
