--- a/module3/module3_slides.Rmd
+++ b/module3/module3_slides.Rmd
@@ -162,30 +162,30 @@ legend(0, 0.2, legend = c("LASSO", "ALASSO", "PheCAP"), col = c("black","red", "
 
 # Supervised learning vs. PheCAP for different training size
 ```{r, cache = TRUE}
-selected_index <- which(colnames(ehr_data) %in% vars)
-start<- Sys.time()
-auc_phecap <- validate_phecap(dat = labeled_data, nsim = 600, 
-                              n.train = c(50, 70, 90),
-                              selected_features = selected_index)
-end <- Sys.time()
-end - start
-
-auc_all <- cbind(auc_supervised, auc_phecap)
+# selected_index <- which(colnames(ehr_data) %in% vars)
+# start<- Sys.time()
+# auc_phecap <- validate_phecap(dat = labeled_data, nsim = 600, 
+#                               n.train = c(50, 70, 90),
+#                               selected_features = selected_index)
+# end <- Sys.time()
+# end - start
+# 
+# auc_all <- cbind(auc_supervised, auc_phecap)
 ```
 
 
 ```{r}
-par(mfrow = c(1, 3))
-boxplot(auc_all %>% select(starts_with("n=50")),
-  ylim = c(0.5, 1),
-  names = c("LASSO", "ALASSO", "PheCAP"), main = "n=50"
-)
-boxplot(auc_all %>% select(starts_with("n=70")),
-  ylim = c(0.5, 1),
-  names =  c("LASSO", "ALASSO", "PheCAP"), main = "n=70"
-)
-boxplot(auc_all %>% select(starts_with("n=90")),
-  ylim = c(0.5, 1),
-  names =  c("LASSO", "ALASSO", "PheCAP"), main = "n=90"
-)
+# par(mfrow = c(1, 3))
+# boxplot(auc_all %>% select(starts_with("n=50")),
+#   ylim = c(0.5, 1),
+#   names = c("LASSO", "ALASSO", "PheCAP"), main = "n=50"
+# )
+# boxplot(auc_all %>% select(starts_with("n=70")),
+#   ylim = c(0.5, 1),
+#   names =  c("LASSO", "ALASSO", "PheCAP"), main = "n=70"
+# )
+# boxplot(auc_all %>% select(starts_with("n=90")),
+#   ylim = c(0.5, 1),
+#   names =  c("LASSO", "ALASSO", "PheCAP"), main = "n=90"
+# )
 ```
